countries corresponding to positive or negative corelations

--- a/FInalProject_2.ipynb
+++ b/FInalProject_2.ipynb
@@ -4349,20 +4349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "149647ad",
+   "execution_count": 98,
+   "id": "14d282a6",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "df_all[\"Country\"].unique()"
+    "countries = df_all[\"Country\"].unique().tolist()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "54062b0f",
+   "id": "215d9d53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4371,8 +4371,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "id": "e1bb8a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_dict_of_countries_according_PIB_CO2_corr = {}\n",
+    "negative_dict_of_countries_according_PIB_CO2_corr = {}\n",
+    "\n",
+    "for indx, country in enumerate(countries):\n",
+    "    temp = df_all[df_all[\"Country\"]==country][[\"Country\", 'CO2', 'PIB']].drop_duplicates()\n",
+    "    if temp.corr()[\"PIB\"][0]>0:\n",
+    "        positive_dict_of_countries_according_PIB_CO2_corr[indx] = (country , temp.corr()[\"PIB\"][0])\n",
+    "    else:\n",
+    "        negative_dict_of_countries_according_PIB_CO2_corr[indx] = (country , temp.corr()[\"PIB\"][0])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "0e096b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: ('Afghanistan', 0.9459049257219457), 1: ('Albania', 0.027348817909068707), 2: ('Algeria', 0.867780623439578), 4: ('Andorra', 0.6005072026004478), 5: ('Angola', 0.9653740803699463), 6: ('Antigua and Barbuda', 0.7521599058322418), 7: ('Argentina', 0.9097698000239121), 8: ('Armenia', 0.8022491261311978), 9: ('Aruba', 0.6243242694770029), 10: ('Australia', 0.8355759939137193), 11: ('Austria', 0.7296779991405957), 12: ('Azerbaijan', 0.002687497852123662), 14: ('Bahrain', 0.9596994736138101), 15: ('Bangladesh', 0.9427828221398197), 16: ('Barbados', 0.9349987914995113), 17: ('Belarus', 0.09358084156429194), 19: ('Belize', 0.940000104894686), 20: ('Benin', 0.9845999520949719), 21: ('Bermuda', 0.6366096568019372), 22: ('Bhutan', 0.9237900385594158), 23: ('Bolivia', 0.9390685565950039), 24: ('Bosnia and Herzegovina', 0.9404237230589285), 25: ('Botswana', 0.9378824465943262), 26: ('Brazil', 0.9099752177309376), 28: ('Brunei Darussalam', 0.47158248334010966), 30: ('Burkina Faso', 0.9769845301384773), 31: ('Burundi', 0.9121686592004363), 32: ('Cabo Verde', 0.9674354197449581), 33: ('Cambodia', 0.9837157790866391), 34: ('Cameroon', 0.7688659011247866), 35: ('Canada', 0.7947147230451657), 36: ('Cayman Islands', 0.16630664851817775), 37: ('Central African Republic', 0.808936121289936), 38: ('Chad', 0.9108481287720096), 40: ('Chile', 0.9438436559379598), 41: ('China', 0.9384538499945463), 42: ('Colombia', 0.8602557598907487), 43: ('Comoros', 0.8781490165349048), 44: ('Congo, Dem. Rep.', 0.08458694362309829), 45: ('Congo, Rep.', 0.7718563026743978), 46: ('Costa Rica', 0.8760029363763387), 47: (\"Cote d'Ivoire\", 0.8045435830259072), 48: ('Croatia', 0.16519808082373771), 49: ('Cuba', 0.1820475165581105), 50: ('Curacao', 0.3445699905339605), 51: ('Cyprus', 0.8655169681528232), 54: ('Djibouti', 0.9463683552272815), 55: ('Dominica', 0.9589846018418257), 56: ('Dominican Republic', 0.8769348470374082), 57: ('Ecuador', 0.9128681117810026), 58: ('Egypt, Arab Rep.', 0.9257584251499671), 59: ('El Salvador', 0.9404658732934322), 60: ('Equatorial Guinea', 0.8498295030404025), 62: ('Estonia', 0.10990121084812347), 63: ('Eswatini', 0.8016988861777758), 64: ('Ethiopia', 0.9599491194310085), 66: ('Fiji', 0.892002305546682), 67: ('Finland', 0.5914378840968672), 69: ('French Polynesia', 0.7733788406614134), 70: ('Gabon', 0.3875209812836248), 71: ('Gambia, The', 0.9294130736521871), 72: ('Georgia', 0.4463176320197693), 74: ('Ghana', 0.9341822705337895), 76: ('Greece', 0.8176117903614218), 77: ('Greenland', 0.362514441206944), 78: ('Grenada', 0.9658696419609275), 80: ('Guatemala', 0.9336495164206504), 81: ('Guinea', 0.8783738575423002), 82: ('Guinea-Bissau', 0.8215235619940383), 83: ('Guyana', 0.565709965671369), 84: ('Haiti', 0.9466005097178976), 85: ('Honduras', 0.9504721371188489), 86: ('Hong Kong SAR, China', 0.9148412876402231), 88: ('Iceland', 0.7499297825115201), 89: ('India', 0.9700143398631362), 90: ('Indonesia', 0.9044307357357998), 91: ('Iran, Islamic Rep.', 0.8912596153860222), 92: ('Iraq', 0.8740109963788996), 93: ('Ireland', 0.7770528969011542), 95: ('Israel', 0.9043509574523069), 96: ('Italy', 0.6642413594392187), 97: ('Jamaica', 0.6458033269940762), 98: ('Japan', 0.8467734635841402), 99: ('Jordan', 0.880649087237962), 100: ('Kazakhstan', 0.7828078296101914), 101: ('Kenya', 0.929308963436523), 102: ('Kiribati', 0.8896512801437322), 104: ('Korea, Rep.', 0.9504716156734277), 106: ('Kuwait', 0.899893870921804), 107: ('Kyrgyz Republic', 0.76222397705031), 108: ('Lao PDR', 0.8461603562925344), 110: ('Lebanon', 0.9552382794329334), 111: ('Lesotho', 0.9406385665710846), 112: ('Liberia', 0.9046890966050801), 113: ('Libya', 0.6048746803051517), 117: ('Macao SAR, China', 0.5141091779009509), 118: ('Madagascar', 0.8798986191467423), 119: ('Malawi', 0.8747115607538235), 120: ('Malaysia', 0.9575268481238033), 121: ('Maldives', 0.980446160622968), 122: ('Mali', 0.973716269085812), 123: ('Malta', 0.6461520700673359), 124: ('Marshall Islands', 0.9610730494246561), 125: ('Mauritania', 0.7782872274705177), 126: ('Mauritius', 0.9598054033767475), 127: ('Mexico', 0.9035090538816284), 128: ('Micronesia, Fed. Sts.', 0.45804219984500344), 131: ('Mongolia', 0.9227171188120753), 132: ('Montenegro', 0.30850119091310957), 133: ('Morocco', 0.9827809987665086), 134: ('Mozambique', 0.7721751849181518), 135: ('Myanmar', 0.7152620246177329), 136: ('Namibia', 0.8632753134455378), 137: ('Nauru', 0.3734420743578404), 138: ('Nepal', 0.9611110420977006), 139: ('Netherlands', 0.6616143907503972), 140: ('New Caledonia', 0.09391464744322417), 141: ('New Zealand', 0.83921400053055), 142: ('Nicaragua', 0.9276985125035797), 143: ('Niger', 0.8786647064941142), 144: ('Nigeria', 0.8302796700723353), 147: ('Norway', 0.7318643726305416), 148: ('Oman', 0.979128211084275), 149: ('Pacific island small states', 0.9101640225155989), 150: ('Pakistan', 0.9578065143117926), 151: ('Palau', 0.32946576754523277), 152: ('Panama', 0.9411628474711017), 153: ('Papua New Guinea', 0.8777000652029495), 154: ('Paraguay', 0.8705579832993974), 155: ('Peru', 0.9401270821423721), 156: ('Philippines', 0.9201854310646539), 158: ('Portugal', 0.8291546655448712), 160: ('Qatar', 0.9351061035354765), 163: ('Rwanda', 0.798781138742571), 164: ('Samoa', 0.9702650154791199), 166: ('Sao Tome and Principe', 0.9541693765547984), 167: ('Saudi Arabia', 0.9363179718482763), 168: ('Senegal', 0.9338282206099053), 170: ('Seychelles', 0.8488938771766776), 171: ('Sierra Leone', 0.7630443457302717), 172: ('Singapore', 0.607824079697292), 173: ('Sint Maarten (Dutch part)', 0.9244502980573368), 175: ('Slovenia', 0.2046584584529929), 176: ('Solomon Islands', 0.710305307101704), 177: ('Somalia', 0.9040133586845527), 178: ('South Africa', 0.9029935708736794), 180: ('Spain', 0.7896344239862688), 181: ('Sri Lanka', 0.9375583021656714), 182: ('St. Kitts and Nevis', 0.9697686223501495), 183: ('St. Lucia', 0.9357442250951185), 185: ('St. Vincent and the Grenadines', 0.9714992175092876), 186: ('Sudan', 0.9491726582318214), 187: ('Suriname', 0.3618255034172047), 189: ('Switzerland', 0.23696282444553377), 190: ('Syrian Arab Republic', 0.8694655992225755), 191: ('Tajikistan', 0.30706790496273895), 192: ('Tanzania', 0.9787044695432129), 193: ('Thailand', 0.9485793507868995), 194: ('Timor-Leste', 0.960470095607204), 195: ('Togo', 0.962469967908274), 196: ('Tonga', 0.8627077405664478), 197: ('Trinidad and Tobago', 0.9653013033116339), 198: ('Tunisia', 0.9660475325489541), 199: ('Turkey', 0.9385952588190213), 200: ('Turkmenistan', 0.9390372730189008), 201: ('Turks and Caicos Islands', 0.9310697115397426), 202: ('Tuvalu', 0.6302945606970752), 203: ('Uganda', 0.958770289045106), 205: ('United Arab Emirates', 0.9786268719110385), 207: ('United States', 0.747838299145783), 208: ('Uruguay', 0.6671866948884134), 210: ('Vanuatu', 0.819982605697746), 211: ('Venezuela, RB', 0.7787389016879812), 212: ('Vietnam', 0.9589883160888877), 214: ('West Bank and Gaza', 0.81033619902648), 215: ('Yemen, Rep.', 0.6829750969544006), 216: ('Zambia', 0.12303258956518788), 217: ('Zimbabwe', 0.2965865969162254)}\n",
+      "{3: ('American Samoa', nan), 13: ('Bahamas, The', -0.296035262887938), 18: ('Belgium', -0.400715596872361), 27: ('British Virgin Islands', nan), 29: ('Bulgaria', -0.4192363675704776), 39: ('Channel Islands', nan), 52: ('Czech Republic', -0.7810220693917247), 53: ('Denmark', -0.645305474254396), 61: ('Eritrea', -0.5866735971161017), 65: ('Faroe Islands', -0.5700057273305718), 68: ('France', -0.36675800012241094), 73: ('Germany', -0.8811905911409773), 75: ('Gibraltar', nan), 79: ('Guam', nan), 87: ('Hungary', -0.7729138098632524), 94: ('Isle of Man', nan), 103: (\"Korea, Dem. People's Rep.\", nan), 105: ('Kosovo', -0.12098442790303737), 109: ('Latvia', -0.23295251106015472), 114: ('Liechtenstein', -0.7070357058665588), 115: ('Lithuania', -0.3257263204202995), 116: ('Luxembourg', -0.28467268117959765), 129: ('Moldova', -0.22093259350170613), 130: ('Monaco', nan), 145: ('North Macedonia', -0.8555379691517151), 146: ('Northern Mariana Islands', nan), 157: ('Poland', -0.6749288695135102), 159: ('Puerto Rico', nan), 161: ('Romania', -0.586926254815409), 162: ('Russian Federation', -0.16202422559854693), 165: ('San Marino', nan), 169: ('Serbia', -0.36233009538711447), 174: ('Slovak Republic', -0.8417825333654014), 179: ('South Sudan', -0.32430477880794795), 184: ('St. Martin (French part)', nan), 188: ('Sweden', -0.6773866993063011), 204: ('Ukraine', -0.3823340029465775), 206: ('United Kingdom', -0.8408003398059744), 209: ('Uzbekistan', -0.6262482930539478), 213: ('Virgin Islands (U.S.)', nan)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(positive_dict_of_countries_according_PIB_CO2_corr)\n",
+    "print(negative_dict_of_countries_according_PIB_CO2_corr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 90,
-   "id": "a52fd9b8",
+   "id": "5b83373b",
    "metadata": {},
    "outputs": [
     {
@@ -4397,7 +4436,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "2946a787",
+   "id": "4e0aca10",
    "metadata": {},
    "outputs": [
     {
